service.yml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
  labels:
    app: todo-app-svc
spec:
  selector:
    app: todo-app
  type: NodePort
  ports:
    - nodePort: 31000
      port: 80
      targetPort: 8080
